--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   blurrycontainer: ^1.0.2
   provider:
   flutter_animated_button: ^2.0.0
+  change_app_package_name: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
