--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider:
   flutter_animated_button: ^2.0.0
   change_app_package_name: ^1.1.0
+  card_swiper: ^2.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
